<resources>
    <string name="app_name">Board Game</string>
    <string name="play">Play</string>
    <string name="top5">Top5</string>
    <string name="top5_header">Player Name, Points, Time Played</string>
    <string name="top5_points">points,</string>
    <string name="leave">Leave</string>
    <string name="name">Name</string>
    <string name="name_hint">Player Name</string>
    <string name="confirm">Confirm</string>
    <string name="game_seconds">Time left:</string>
    <string name="game_player">Player:</string>
    <string name="game_points">Points:</string>
    <string name="game_level">Level:</string>
    <string name="game_end">End Game</string>
    <string name="profile_info">Profile Info</string>
    <string name="user_data">Please set your Name and Image</string>
    <string name="mn_credits">Credits</string>
    <string name="mn_profile">Profile</string>
    <string name="pw">Practical Work AMov - Kotlin</string>
</resources>