<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/play"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTop5"
        app:layout_constraintEnd_toEndOf="@+id/btnTop5"
        app:layout_constraintStart_toStartOf="@+id/btnTop5" />

    <Button
        android:id="@+id/btnTop5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/top5"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLeave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/leave"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/btnTop5"
        app:layout_constraintStart_toStartOf="@+id/btnTop5"
        app:layout_constraintTop_toBottomOf="@+id/btnTop5"
        tools:textSize="32sp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />
</androidx.constraintlayout.widget.ConstraintLayout>